update build.gradle
- update Java version (8 to 11)
- add The Badass JLink Plugin
- remove jgraphaddon
- fix deprecated methods
- ref #5, #11